fix: Account for scrollbar-width on tables w/o one
Now the space between tables should be roughly equal, whether the tables
have a scrollbar or not.
Also the vertical space among floating tables and between floating tables and
centered tables should now be equal.

--- a/style.less
+++ b/style.less
@@ -29,7 +29,11 @@ div.dokuwiki {
     }
 
     div.floatwrapper {
-        margin: 5px 5px 1em;
+        margin: 0 0 1em;
+
+        div.table > table {
+            margin-right: 15px;
+        }
 
         &.center {
             clear: both;
